Update: errores tirada corregidos

--- a/app/templates/macro_mostrar_historico.html
+++ b/app/templates/macro_mostrar_historico.html
@@ -39,7 +39,7 @@ Recibe la lista de tuplas (Historico, Partido) "combined_information", y el nomb
             {% endif %}
 
         </td>
-      <td> {{ pair[0].tiempo_jugado }}</td>
+      <td> {{ pair[0].tiempo_jugador }}</td>
       <td> {{ pair[0].puntos_marcados }}</td>
         <td> {{ pair[0].puntuacion }}</td>
 
